[gd_scene load_steps=5 format=3 uid="uid://bjwoinc6f0260"]

[ext_resource type="Script" uid="uid://torr21yjrpbf" path="res://Scripts/Character/character.gd" id="1_acr0g"]
[ext_resource type="Texture2D" uid="uid://c1eigqv8587w7" path="res://icon.svg" id="2_ticvp"]
[ext_resource type="Texture2D" uid="uid://yw6iygxaluji" path="res://Assets/shield.svg" id="3_3mn46"]
[ext_resource type="Script" uid="uid://cbeshj3xm0jds" path="res://Scripts/Character/Labels/damage_taken_label.gd" id="4_dk5p5"]

[node name="Character" type="Node2D"]
script = ExtResource("1_acr0g")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(64, 64)
texture = ExtResource("2_ticvp")

[node name="NameLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_top = -48.0
offset_right = 128.0
offset_bottom = -24.0
bbcode_enabled = true

[node name="HealthLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_top = -24.0
offset_right = 128.0
bbcode_enabled = true

[node name="Shield" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(-16, -8)
scale = Vector2(0.333333, 0.333333)
texture = ExtResource("3_3mn46")

[node name="DamageTakenLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_top = -64.0
offset_right = 128.0
offset_bottom = -16.0
bbcode_enabled = true
text = "7"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_dk5p5")
